--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="js/script.js" defer></script>
+    <script src="/js/project.js" defer></script>
 </head>
 
 <body>
