changed code to be more effecient

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/project.js" defer></script>
+    <script src="/js/timer.js" defer></script>
 </head>
 
 <body>
@@ -19,7 +19,6 @@
             </div>
             <div class="timer__buttons">
                 <button class="timer_start">Start</button>
-                <button class="timer_pause">Pause</button>
                 <button class="timer_reset">Reset</button>
             </div>
         </div>
