--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/timer.js" defer></script>
+    <script type="module" src="/js/studyTimer.js" defer></script>
 </head>
 
 <body>
