--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 <div class="container">
 	<div class="top__buttons">
-		<button class="pomodoro">pomodoro</button>
-		<button class="short__break">short break</button>
-		<button class="long__break">long break</button>
+		<button class="pomodoro buttons">pomodoro</button>
+		<button class="short__break buttons">short break</button>
+		<button class="long__break buttons">long break</button>
 	</div>
 	<div class="timer">
 		<div class="timer__time">
@@ -23,8 +23,8 @@
 			<span class="timer_seconds">00</span>
 		</div>
 		<div class="timer__buttons">
-			<button class="timer_start">Start</button>
-			<button class="timer_reset">Reset</button>
+			<button class="timer_start buttons">Start</button>
+			<button class="timer_reset buttons">Reset</button>
 		</div>
 	</div>
 </div>
