created it as an extension for chrome

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="top__buttons">
 		<button class="pomodoro buttons">pomodoro</button>
 		<button class="short__break buttons">short break</button>
-		<button class="short__break buttons">long break</button>
+		<button class="long__break buttons">long break</button>
 	</div>
 	<div class="timer">
 		<div class="timer__time">
